--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/tolliverk/chocobobDiscordBot#readme",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.40",
     "@xivapi/js": "^0.4.1",
-    "discord.js": "^14.7.1",
+    "discord.js": "^14.9.0",
     "discordjs-button-pagination": "^3.0.1",
     "discordjs-paginate": "^0.0.7-bunnygirl",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "puppeteer": "^19.8.5",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
