--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@discordjs/rest": "^1.7.1",
     "@napi-rs/canvas": "^0.1.40",
     "@xivapi/js": "^0.4.1",
+    "chalk": "^5.2.0",
     "discord-api-types": "^0.37.42",
     "discord.js": "^14.9.0",
     "discordjs-button-pagination": "^3.0.1",
     "discordjs-paginate": "^0.0.7-bunnygirl",
     "discordjs-v14-pagination": "^1.0.6",
     "dotenv": "^16.0.3",
+    "mongoose": "^7.1.1",
     "puppeteer": "^19.8.5",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
