--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@discordjs/rest": "^2.2.0",
     "@napi-rs/canvas": "^0.1.51",
     "@xivapi/js": "^0.4.5",
+    "axios": "^1.6.8",
     "chalk": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "crypto-js": "^4.2.0",
     "discord-api-types": "^0.37.77",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "mongoose": "^8.2.4",
-    "puppeteer": "^22.6.1"
+    "mongoose": "^8.2.4"
   }
 }
